updates to vimrc - adding Gitv plugin

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -36,7 +36,7 @@ bind -t vi-copy 'Space' halfpage-down
 bind -t vi-copy 'Bspace' halfpage-up
 
 # For tmux-logging plugin
-LOGGING_PATH="~/scratch"
+LOGGING_PATH="~/logs"
 set-option -g @logging-path $LOGGING_PATH
 set-option -g @screen-capture-path $LOGGING_PATH
 set-option -g @save-complete-history-path $LOGGING_PATH
