add hybrid theme

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -43,7 +43,7 @@ set-option -g @save-complete-history-path $LOGGING_PATH
 
 # For tmux-colors-solarized
 #set-option -g @colors-solarized 'light'
-set -g @colors-solarized 'light'
+set -g @colors-solarized 'dark'
 
 set-option -g default-terminal "screen-256color"
 
